[tool.poetry]
name = "cita-dash"
version = "0.1.0"
description = ""
authors = ["izzy lyseggen <izzy.lyseggen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.8.1"
pandas = "^1.4.2"
requests = "^2.27.1"
pydantic = "^1.9.0"
plotly = "^5.7.0"
specklepy = "^2.6.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.5"
devtools = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
